--- a/TheMovieDB/TheMovieDB/features/Main/Main.storyboard
+++ b/TheMovieDB/TheMovieDB/features/Main/Main.storyboard
@@ -14,7 +14,7 @@
                     <view key="view" contentMode="scaleToFill" id="6pI-9s-OdQ">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemPurpleColor" red="0.68627450980000004" green="0.32156862749999998" blue="0.87058823529999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="kDs-7C-YFL"/>
                     </view>
                 </viewController>
