--- a/TheMovieDB/TheMovieDB/features/LastReleases/LastReleases.storyboard
+++ b/TheMovieDB/TheMovieDB/features/LastReleases/LastReleases.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -14,13 +15,87 @@
                     <view key="view" contentMode="scaleToFill" id="FMY-Ad-lkx">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="hGq-SD-UrZ">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="0.0" id="c52-tb-5mc">
+                                    <size key="itemSize" width="200" height="200"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MovieCell" id="zjg-c7-PfE" customClass="MovieCell" customModule="TheMovieDB" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="156" height="243"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="zgM-eo-J6w">
+                                            <rect key="frame" x="0.0" y="0.0" width="156" height="243"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UbJ-bZ-woh">
+                                                    <rect key="frame" x="0.0" y="0.0" width="156" height="243"/>
+                                                </imageView>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qzs-EN-9aP">
+                                                    <rect key="frame" x="90" y="96.5" width="50" height="50"/>
+                                                    <subviews>
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b0z-8Y-4GY">
+                                                            <rect key="frame" x="0.0" y="2.5" width="50" height="45"/>
+                                                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <state key="normal" backgroundImage="arrow.right" catalog="system"/>
+                                                            <connections>
+                                                                <action selector="tapOnbutton:" destination="zjg-c7-PfE" eventType="touchUpInside" id="QBb-hB-cY0"/>
+                                                            </connections>
+                                                        </button>
+                                                    </subviews>
+                                                    <color key="backgroundColor" red="0.65087642770862941" green="0.15193438394834874" blue="0.13364958404239841" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstItem="b0z-8Y-4GY" firstAttribute="width" secondItem="qzs-EN-9aP" secondAttribute="width" id="5of-uQ-JMA"/>
+                                                        <constraint firstAttribute="width" constant="50" id="6kf-fC-u1Y"/>
+                                                        <constraint firstItem="b0z-8Y-4GY" firstAttribute="centerY" secondItem="qzs-EN-9aP" secondAttribute="centerY" id="OA7-GW-Lva"/>
+                                                        <constraint firstItem="b0z-8Y-4GY" firstAttribute="centerX" secondItem="qzs-EN-9aP" secondAttribute="centerX" id="PpB-Oh-6Fs"/>
+                                                        <constraint firstAttribute="height" constant="50" id="TIO-V2-uC0"/>
+                                                        <constraint firstItem="b0z-8Y-4GY" firstAttribute="height" secondItem="qzs-EN-9aP" secondAttribute="height" id="g1t-Y6-8KI"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="UbJ-bZ-woh" firstAttribute="top" secondItem="zgM-eo-J6w" secondAttribute="top" id="1wy-oW-iTQ"/>
+                                                <constraint firstItem="qzs-EN-9aP" firstAttribute="centerY" secondItem="zgM-eo-J6w" secondAttribute="centerY" id="3ap-bw-Q0H"/>
+                                                <constraint firstAttribute="trailing" secondItem="UbJ-bZ-woh" secondAttribute="trailing" id="HZh-ci-aU3"/>
+                                                <constraint firstItem="UbJ-bZ-woh" firstAttribute="leading" secondItem="zgM-eo-J6w" secondAttribute="leading" id="OxV-5J-uWo"/>
+                                                <constraint firstAttribute="bottom" secondItem="UbJ-bZ-woh" secondAttribute="bottom" id="QPQ-i2-ghR"/>
+                                                <constraint firstAttribute="trailing" secondItem="qzs-EN-9aP" secondAttribute="trailing" constant="16" id="zTn-1C-hYO"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                        <size key="customSize" width="156" height="243"/>
+                                        <connections>
+                                            <outlet property="btnDetails" destination="b0z-8Y-4GY" id="Gi4-ai-GPY"/>
+                                            <outlet property="imageView" destination="UbJ-bZ-woh" id="Hpc-uq-QqN"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="jxT-ul-Xl1" firstAttribute="trailing" secondItem="hGq-SD-UrZ" secondAttribute="trailing" id="2hj-Yg-pGB"/>
+                            <constraint firstItem="hGq-SD-UrZ" firstAttribute="top" secondItem="jxT-ul-Xl1" secondAttribute="top" id="MQd-lr-3jZ"/>
+                            <constraint firstItem="hGq-SD-UrZ" firstAttribute="leading" secondItem="jxT-ul-Xl1" secondAttribute="leading" id="fVj-e7-cW7"/>
+                            <constraint firstItem="hGq-SD-UrZ" firstAttribute="bottom" secondItem="jxT-ul-Xl1" secondAttribute="bottom" id="ubk-p8-36K"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="jxT-ul-Xl1"/>
                     </view>
+                    <connections>
+                        <outlet property="collectionView" destination="hGq-SD-UrZ" id="vTm-qh-TtV"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="F5D-bi-xMj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-164" y="191"/>
+            <point key="canvasLocation" x="-165.21739130434784" y="190.84821428571428"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="arrow.right" catalog="system" width="128" height="98"/>
+    </resources>
 </document>
