--- a/TheMovieDB/TheMovieDB/features/Details/Details.storyboard
+++ b/TheMovieDB/TheMovieDB/features/Details/Details.storyboard
@@ -18,7 +18,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TGf-98-iwA" userLabel="View1">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="0y6-ez-6PL">
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="0y6-ez-6PL">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="818"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l2U-YP-kwC">
@@ -131,7 +131,6 @@
                                                         </subviews>
                                                         <constraints>
                                                             <constraint firstItem="OcN-tG-zS8" firstAttribute="height" secondItem="n3c-79-T4G" secondAttribute="height" multiplier="2/4" id="7WR-Vd-Gfv"/>
-                                                            <constraint firstItem="U3F-Hd-0F8" firstAttribute="height" secondItem="n3c-79-T4G" secondAttribute="height" multiplier="1/4" id="O3S-6z-IqO"/>
                                                             <constraint firstItem="u02-b6-7G3" firstAttribute="height" secondItem="U3F-Hd-0F8" secondAttribute="height" id="pRD-5D-7uC"/>
                                                         </constraints>
                                                     </stackView>
@@ -145,14 +144,14 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" verticalCompressionResistancePriority="749" translatesAutoresizingMaskIntoConstraints="NO" id="kIp-CZ-jHu" userLabel="View3">
-                                                <rect key="frame" x="0.0" y="409" width="414" height="309"/>
+                                                <rect key="frame" x="0.0" y="409" width="414" height="327"/>
                                                 <subviews>
-                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Sh3-pi-Tq1">
-                                                        <rect key="frame" x="0.0" y="0.0" width="138" height="247"/>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Sh3-pi-Tq1">
+                                                        <rect key="frame" x="0.0" y="0.0" width="138" height="262"/>
                                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     </imageView>
                                                     <view contentMode="scaleToFill" verticalCompressionResistancePriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="p3Z-gl-6PA">
-                                                        <rect key="frame" x="138" y="0.0" width="276" height="309"/>
+                                                        <rect key="frame" x="138" y="0.0" width="276" height="327"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oqv-pR-7DO">
                                                                 <rect key="frame" x="6" y="0.0" width="264" height="264"/>
@@ -183,10 +182,10 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="O1J-GS-CDM" userLabel="View4">
-                                                <rect key="frame" x="0.0" y="718" width="414" height="100"/>
+                                                <rect key="frame" x="0.0" y="736" width="414" height="82"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BGd-PQ-NwV">
-                                                        <rect key="frame" x="0.0" y="0.0" width="138" height="100"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="138" height="82"/>
                                                         <subviews>
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9JY-jz-pqk">
                                                                 <rect key="frame" x="54" y="4" width="30" height="30"/>
@@ -198,7 +197,7 @@
                                                                 <state key="normal" backgroundImage="star.fill" catalog="system"/>
                                                             </button>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C9c-Ze-iM7">
-                                                                <rect key="frame" x="0.0" y="33.5" width="138" height="66.5"/>
+                                                                <rect key="frame" x="0.0" y="27.5" width="138" height="54.5"/>
                                                                 <string key="text">7.7/10
 16056</string>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -217,10 +216,10 @@
                                                         </constraints>
                                                     </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3nt-cb-frI">
-                                                        <rect key="frame" x="138" y="0.0" width="276" height="100"/>
+                                                        <rect key="frame" x="138" y="0.0" width="276" height="82"/>
                                                         <subviews>
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xQf-NW-wVa">
-                                                                <rect key="frame" x="16" y="25" width="244" height="50"/>
+                                                                <rect key="frame" x="16" y="20.5" width="244" height="41"/>
                                                                 <color key="backgroundColor" red="0.8902680838" green="0.2070635129" blue="0.17371135160000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 <inset key="imageEdgeInsets" minX="-25" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -242,7 +241,7 @@
                                                 <constraints>
                                                     <constraint firstAttribute="bottom" secondItem="BGd-PQ-NwV" secondAttribute="bottom" id="7c5-NP-Thv"/>
                                                     <constraint firstItem="BGd-PQ-NwV" firstAttribute="width" secondItem="O1J-GS-CDM" secondAttribute="width" multiplier="1/3" id="8We-nq-h7o"/>
-                                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="100" id="HIh-2g-I0s"/>
+                                                    <constraint firstAttribute="height" relation="lessThanOrEqual" priority="750" constant="100" id="HIh-2g-I0s"/>
                                                     <constraint firstItem="BGd-PQ-NwV" firstAttribute="leading" secondItem="O1J-GS-CDM" secondAttribute="leading" id="Hyg-F8-SLQ"/>
                                                     <constraint firstAttribute="bottom" secondItem="3nt-cb-frI" secondAttribute="bottom" id="Q84-8K-Ty3"/>
                                                     <constraint firstItem="BGd-PQ-NwV" firstAttribute="top" secondItem="O1J-GS-CDM" secondAttribute="top" id="Vzj-kj-D3o"/>
@@ -253,7 +252,7 @@
                                             </view>
                                         </subviews>
                                         <constraints>
-                                            <constraint firstItem="kIp-CZ-jHu" firstAttribute="height" relation="lessThanOrEqual" secondItem="0y6-ez-6PL" secondAttribute="height" multiplier="4/10" id="CC3-xu-ZiL"/>
+                                            <constraint firstItem="kIp-CZ-jHu" firstAttribute="height" secondItem="0y6-ez-6PL" secondAttribute="height" multiplier="4/10" id="CC3-xu-ZiL"/>
                                             <constraint firstItem="ODD-Fz-Yui" firstAttribute="height" secondItem="0y6-ez-6PL" secondAttribute="height" multiplier="2/10" id="bC6-pr-yUd"/>
                                             <constraint firstItem="l2U-YP-kwC" firstAttribute="height" secondItem="0y6-ez-6PL" secondAttribute="height" multiplier="3/10" id="nch-jm-aax"/>
                                         </constraints>
@@ -277,6 +276,19 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="iCr-dE-0dA"/>
                     </view>
+                    <connections>
+                        <outlet property="backdrop_img" destination="lsG-hF-MV8" id="iDc-Xn-3R7"/>
+                        <outlet property="btnPlay" destination="hL4-qj-9q5" id="RnE-q0-fHY"/>
+                        <outlet property="btn_addFavorites" destination="xQf-NW-wVa" id="wTJ-NP-caA"/>
+                        <outlet property="categories" destination="zn5-eE-Lei" id="Snu-mj-d2Q"/>
+                        <outlet property="lbl_duration" destination="qCx-bR-ggz" id="4oR-nb-hcu"/>
+                        <outlet property="lbl_subtitle" destination="wSz-n8-E8K" id="Z8d-1u-AEw"/>
+                        <outlet property="lbl_title" destination="V2x-km-vHM" id="qIb-qk-chj"/>
+                        <outlet property="lbl_year" destination="0KI-Q2-nQg" id="RIC-T8-jZm"/>
+                        <outlet property="overview" destination="oqv-pR-7DO" id="QHz-T4-m2H"/>
+                        <outlet property="poster" destination="Sh3-pi-Tq1" id="14m-J5-VgG"/>
+                        <outlet property="votes" destination="C9c-Ze-iM7" id="byD-IA-Mqe"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qwi-bS-apd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
