--- a/TheMovieDB/TheMovieDB/features/Details/Details.storyboard
+++ b/TheMovieDB/TheMovieDB/features/Details/Details.storyboard
@@ -201,11 +201,11 @@
                                                                 <string key="text">7.7/10
 16056</string>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                                <nil key="textColor"/>
+                                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                         </subviews>
-                                                        <color key="backgroundColor" systemColor="systemGray3Color" red="0.78039215689999997" green="0.78039215689999997" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
                                                             <constraint firstItem="C9c-Ze-iM7" firstAttribute="leading" secondItem="BGd-PQ-NwV" secondAttribute="leading" id="3tj-b2-JhF"/>
                                                             <constraint firstItem="C9c-Ze-iM7" firstAttribute="height" secondItem="BGd-PQ-NwV" secondAttribute="height" multiplier="2/3" id="XOE-m8-bAl"/>
@@ -228,7 +228,7 @@
                                                                 </state>
                                                             </button>
                                                         </subviews>
-                                                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
                                                             <constraint firstAttribute="trailing" secondItem="xQf-NW-wVa" secondAttribute="trailing" constant="16" id="A8G-Zk-dEz"/>
                                                             <constraint firstItem="xQf-NW-wVa" firstAttribute="centerY" secondItem="3nt-cb-frI" secondAttribute="centerY" id="Qel-8Y-4pD"/>
@@ -267,7 +267,7 @@
                                 </constraints>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemPinkColor" red="1" green="0.1764705882" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="iCr-dE-0dA" firstAttribute="trailing" secondItem="TGf-98-iwA" secondAttribute="trailing" id="3oY-9j-1mv"/>
                             <constraint firstItem="iCr-dE-0dA" firstAttribute="bottom" secondItem="TGf-98-iwA" secondAttribute="bottom" id="Eyg-Rj-EWv"/>
