MO-1 Implementation of open the trailer in safari. Refactor application color appearance

--- a/TheMovieDB/TheMovieDB/features/Favorites/Favorites.storyboard
+++ b/TheMovieDB/TheMovieDB/features/Favorites/Favorites.storyboard
@@ -20,7 +20,7 @@
                             </imageView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="vVg-YV-31H">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="sectionIndexBackgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="FavoriteCell" rowHeight="150" id="GcV-1C-vv1" customClass="FavoriteCell" customModule="TheMovieDB" customModuleProvider="target">
@@ -30,22 +30,24 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="150"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EqF-50-YBG">
-                                                    <rect key="frame" x="20" y="11" width="140" height="128"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EqF-50-YBG">
+                                                    <rect key="frame" x="20" y="0.0" width="150" height="150"/>
+                                                    <color key="tintColor" red="0.74901960784313726" green="0.1426299190123288" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="140" id="B7u-47-0dl"/>
+                                                        <constraint firstAttribute="width" constant="150" id="GXd-Ok-qX2"/>
+                                                        <constraint firstAttribute="height" constant="150" id="vXZ-i9-XRi"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ARTEMIS FOWL" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nX4-le-SUb">
-                                                    <rect key="frame" x="168" y="11" width="226" height="85.5"/>
+                                                    <rect key="frame" x="178" y="11" width="216" height="100"/>
                                                     <fontDescription key="fontDescription" name="MarkerFelt-Wide" family="Marker Felt" pointSize="25"/>
-                                                    <nil key="textColor"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Year 2018" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Ue-se-7J4">
-                                                    <rect key="frame" x="168" y="96.5" width="226" height="42.5"/>
+                                                    <rect key="frame" x="178" y="89" width="216" height="50"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                                    <nil key="textColor"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -62,10 +64,8 @@
                                                 <constraint firstItem="nX4-le-SUb" firstAttribute="top" secondItem="efB-rK-9dr" secondAttribute="topMargin" id="sDG-at-B7V"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <color key="tintColor" red="0.8902680838" green="0.2070635129" blue="0.17371135160000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <constraints>
-                                            <constraint firstItem="EqF-50-YBG" firstAttribute="height" secondItem="GcV-1C-vv1" secondAttribute="height" multiplier="0.853333" id="hV3-OG-7jG"/>
-                                        </constraints>
                                         <connections>
                                             <outlet property="posterImageView" destination="EqF-50-YBG" id="Evw-ua-bkM"/>
                                             <outlet property="title" destination="nX4-le-SUb" id="3fI-vE-jPI"/>
